[tool.poetry]
name = "minigrep-py"
version = "0.1.0"
description = ""
authors = ["H1rono <hronok66@gmail.com>"]
readme = "README.md"
packages = [{ include = "minigrep_py" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^23.3.0"
mypy = "^1.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
